force-app/main/default/objects/B2B_Product_Media__c/B2B_Product_Media__c.object-meta.xml
<CustomObject>
    <label>B2B Product Media</label>
    <nameField>
        <label>B2B Product Media Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Product Media</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>