force-app/main/default/objects/B2B_Product_Media__c/fields/B2B_Media_URL__c.field-meta.xml
<CustomField>
    <fullName>B2B_Media_URL__c</fullName>
    <label>B2B Media URL</label>
    <type>Url</type>
</CustomField>