force-app/main/default/objects/B2B_Product_Media__c/fields/B2B_Product_Media_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Media_Type__c</fullName>
    <label>B2B Product Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OMA Files</fullName>
            </value>
            <value>
                <fullName>Catalogue Page</fullName>
            </value>
            <value>
                <fullName>Mounting Instructions (VH)</fullName>
            </value>
            <value>
                <fullName>Mounting Instructions (Video)</fullName>
            </value>
            <value>
                <fullName>Drilling Coordinates</fullName>
            </value>
            <value>
                <fullName>Conformity Confirmation</fullName>
            </value>
            <value>
                <fullName>Related Clip-Ons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>