force-app/main/default/objects/B2B_Product_Media__c/fields/B2B_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sort_Order__c</fullName>
    <label>B2B Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>